force-app/main/default/objects/MotivoAtraso__c/MotivoAtraso__c.object-meta.xml
<CustomObject>
    <label>Motivo do Atraso</label>
    <nameField>
        <label>Motivo do Atraso</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Motivos do Atraso</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>