force-app/main/default/objects/MotivoAtraso__c/fields/Atrasos_Omni__c.field-meta.xml
<CustomField>
    <fullName>Atrasos_Omni__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Atrasos Omni</label>
    <referenceTo>Atrasos_Omni__c</referenceTo>
    <relationshipLabel>Motivos do Atraso</relationshipLabel>
    <relationshipName>Motivos_do_Atraso</relationshipName>
    <type>Lookup</type>
</CustomField>