force-app/main/default/objects/MotivoAtraso__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IATA</fullName>
            </value>
            <value>
                <fullName>Petrobras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>