force-app/main/default/objects/MotivoAtraso__c/fields/IATA_Code__c.field-meta.xml
<CustomField>
    <fullName>IATA_Code__c</fullName>
    <description>IATA code of delay</description>
    <label>IATA Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>