force-app/main/default/objects/MotivoAtraso__c/fields/IATA_Group__c.field-meta.xml
<CustomField>
    <fullName>IATA_Group__c</fullName>
    <description>IATA group of delay</description>
    <label>IATA Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IATA_Group</valueSetName>
    </valueSet>
</CustomField>