force-app/main/default/objects/MotivoAtraso__c/fields/IATANUM__c.field-meta.xml
<CustomField>
    <fullName>IATANUM__c</fullName>
    <description>Number of delay IATA</description>
    <label>IATA Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>