force-app/main/default/objects/MotivoAtraso__c/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <label>Setor Responsável</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Motivado pelo Cliente</fullName>
            </value>
            <value>
                <fullName>Motivado pela Omni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>