force-app/main/default/objects/MotivoAtraso__c/validationRules/CategoriaMotivoAtraso.validationRule-meta.xml
<ValidationRule>
    <fullName>CategoriaMotivoAtraso</fullName>
    <active>true</active>
    <errorConditionFormula>AND (NOT(ISNEW()), ISCHANGED(Categoria__c))</errorConditionFormula>
    <errorMessage>Não é possível alterar a Categoria de Motivo Atraso</errorMessage>
</ValidationRule>