force-app/main/default/objects/MotivoAtraso__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Atrasos_Omni__c</columns>
    <columns>NAME</columns>
    <columns>Categoria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>